--- a/wrappers/android/examples/recording/src/main/res/values/colors.xml
+++ b/wrappers/android/examples/recording/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="intel_blue">#0071c5</color>
     <color name="black">#000000</color>
     <color name="black_overlay">#66000000</color>
+    <color name="purple_200">#BB86FC</color>
 </resources>
